<resources>
    <string name="app_name">点餐小助手</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="dish_detail_activity">详情</string>
    <string name="order_dish_activity">点菜</string>
    <string name="action_scan">搜索</string>
    <string name="action_notifications">通知</string>
    <string name="ack_order_activity">确认下单</string>
    <string name="comment">%d评论</string>
    <string name="sell_num">月售%d份</string>
    <string name="in_all">总计</string>
    <string name="rmb">￥%s</string>
    <string name="dish">菜肴</string>
    <string name="rmb_sign">￥</string>
    <string name="add">增加</string>
    <string name="minus">减少</string>
    <string name="dish_introduction">菜肴简介</string>
    <string name="dish_appraise">菜肴评价</string>
    <string name="signboard">招牌</string>
    <string name="cart">购物车</string>
    <string name="compute">去结算</string>
    <string name="exit">退出</string>
    <string name="head_image">头像</string>
    <string name="product_sign">×%d</string>
    <string name="rmb_0">￥0</string>
    <string name="right_arrow">右箭头</string>
    <string name="position">位置</string>
    <string name="play_online">在线支付</string>
    <string name="play_cash">现金支付</string>
    <string name="mark_tile">订单备注</string>
    <string name="mark_tail">口味、偏好等其它要求</string>
    <string name="consignee_address">外卖地址</string>
    <string name="consignee_name">联系人</string>
    <string name="consignee_tel">联系电话</string>
    <string name="sure">确定</string>
    <string name="your_name">您的姓名</string>
    <string name="your_tel">您的电话</string>
    <string name="your_address">您的地址</string>
    <string name="number">%d号</string>
    <string name="table_num">桌位号:%s</string>
    <string name="table">桌位号</string>
    <string name="_native">本店</string>
    <string name="choose">请选择</string>
    <string name="outer">外卖</string>
    <string name="order_mark">订单备注</string>
    <string name="quick_mark">快速备注</string>
    <string name="no_capsicum">不要辣椒</string>
    <string name="little_capsicum">少点辣椒</string>
    <string name="much_capsicum">多点辣椒</string>
    <string name="no_green_onion">不要葱花</string>
    <string name="much_green_onion">多点葱花</string>
    <string name="no_onion">不要洋葱</string>
    <string name="no_caraway">不要香菜</string>
    <string name="much_vinegar">多放点醋</string>
    <string name="other_mark">其它备注</string>
    <string name="other_mark_hint">输入其他区备注内容（可不填）</string>
    <string name="check_on">选中</string>
    <string name="check_off">未选中</string>
    <string name="pay">支付</string>
    <string name="alipay">支付宝</string>
    <string name="goods_id">商品编号</string>
    <string name="play_sum">支付金额</string>
    <string name="pay_way">支付方式</string>
    <string name="online_pay">在线支付</string>
    <string name="login">登录</string>
    <string name="goods_num">商品号：%s</string>
    <string name="register">注册</string>
    <string name="address">地址信息</string>
    <string name="consignee">联系人</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="name">姓名</string>
    <string name="verify_sms_code">请输入短信验证码</string>
    <string name="re_send">重发验证码</string>
    <string name="phoneNumOrUserName">手机号/用户名</string>
    <string name="logout">退出登录</string>
    <string name="sure_logout">是否确认退出登录</string>
    <string name="cancel">取消</string>
    <string name="location">外卖地址</string>
    <string name="phone">电话</string>
    <string name="change_face">修改头像</string>
    <string name="set_information">编辑个人信息</string>
    <string name="picture">拍照</string>
    <string name="gallery">相册</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="other">其它</string>
    <string name="order">订单</string>
    <string name="discover">发现</string>
    <string name="weixin">微信</string>
    <string name="pay_mark">注：收款方为第三方支付服务商：六子工作室。如有疑问，请联系：923847753@qq.com</string>
    <string name="total_price">总金额：￥%s</string>
    <string name="delete">删除</string>
    <string name="delete_order">删除订单</string>
    <string name="sure_delete">是否确认删除订单</string>
    <string name="submit_order">提交订单</string>
    <string name="add_comment">添加评论</string>
    <string name="choose_dish">请选择评论的菜肴</string>
    <string name="loading">加载中…</string>
    <string name="dish_summarize">菜肴简介：%s</string>
    <string name="search">搜索</string>
    <string name="version">当前版本号：%s</string>
    <string name="get_version_fail">成功获取失败</string>
    <string name="catchword">用上点餐小助手，\n妈妈再也不担心吃饭问题了!</string>
    <string name="developer">开发者\n重庆邮电大学\n923847753@qq.com</string>
    <string name="share">分享</string>
    <string name="share_content">用上点餐小助手，妈妈再也不担心吃饭问题了!赶紧去下载吧：https://www.pgyer.com/dish</string>
    <string-array name="state">
        <item>已取消</item>
        <item>未支付</item>
        <item>上菜中</item>
        <item>已完成</item>
    </string-array>
    <string name="title_activity_settings">设置</string>
    <string name="title_update">自动更新</string>
    <string name="description_update">在WIFI网络连接时，自动下载更新安装包</string>
    <string name="default_address">外卖收货地址</string>
    <string name="outer_address">未设置</string>
    <string name="base_settings">基本设置</string>
    <string name="shake_send_feedback">摇一摇发送反馈</string>
    <string name="shake_send_feedback_content">遇到问题？摇一摇手机就能反馈～</string>
    <string name="auto_update">自动更新软件</string>
    <string name="auto_update_content">使用WIFI时，自动下载更新包</string>
    <string name="back_mode">退出模式设置</string>
    <string name="back_mode_content">双击返回键，退出程序</string>
    <string name="notification_settings">通知设置</string>
    <string name="push_message">推送消息设置</string>
    <string name="push_message_content">接受商家推送信息</string>
    <string name="user_settings">账号设置</string>
    <string name="my_user_settings">账号信息</string>
    <string name="my_user_settings_content">修改账号信息，设置收货地址</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="app_html">https://github.com/chenls/OrderDishes</string>
</resources>
