<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_discover"
            android:checked="true"
            android:icon="@mipmap/ic_drawer_discover"
            android:title="@string/discover" />
        <item
            android:id="@+id/nav_dish"
            android:icon="@mipmap/ic_drawer_dish"
            android:title="@string/order_dish_activity" />
        <item
            android:id="@+id/nav_order"
            android:icon="@mipmap/ic_action_order"
            android:title="@string/order" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@mipmap/ic_drawer_settings"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/ic_drawer_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
