<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/consignee_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/position"
                android:src="@mipmap/icon_position" />

            <TextView
                android:id="@+id/order_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/imageView2"
                android:layout_marginBottom="-5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/consignee"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_toRightOf="@+id/imageView2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pay_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/order_name"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/order_name"
                android:layout_toRightOf="@+id/order_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/consignee_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/order_name"
                android:layout_alignStart="@+id/order_name"
                android:layout_below="@+id/imageView2"
                android:layout_marginTop="-5dp"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/right_arrow"
                android:src="@mipmap/arrow_right_gray" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_play_online"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/play_online"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/iv_play_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/check_on"
                    android:contentDescription="@string/check_on" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/colorLightGrey" />

            <RelativeLayout
                android:id="@+id/rl_play_cash"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/play_cash"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/iv_play_cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/check_off"
                    android:contentDescription="@string/check_off" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/mark"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/order_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/mark_tile"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@mipmap/arrow_right_gray"
                android:contentDescription="@string/right_arrow" />

            <TextView
                android:id="@+id/tv_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/order_mark"
                android:layout_toLeftOf="@+id/imageButton"
                android:layout_toRightOf="@+id/order_mark"
                android:layout_toStartOf="@+id/imageButton"
                android:gravity="end"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/mark_tail"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="13sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

